traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:20: error: ';' expected but 'if' found.
    } if (moitie==true) {
      ^